--- a/client/src/style/StatusCard.css
+++ b/client/src/style/StatusCard.css
@@ -1,24 +1,57 @@
 .status-card {
-  background: #101c40;
-  padding: 15px;
-  margin: 10px;
-  border-radius: 10px;
-  color: white;
+  flex: 0 0 auto;
+  padding: 8px 5px;
+  border-radius: 6px;
+  cursor: pointer;
 }
-.status-blocks {
-  display: flex;
-  flex-wrap: wrap;
+.green {
+  height: 40px;
+  width: 40px;
+  background-color: #00ae00;
+  border-radius: 18px;
 }
-.dot {
-  width: 15px;
-  height: 15px;
+.red {
+  height: 40px;
+  width: 40px;
+  border-bottom: 4px solid red;
+}
+
+.orange {
+  height: 40px;
+  width: 40px;
+  background-color: #eb7900;
+  border-radius: 18px;
+}
+
+.yellow {
+  height: 40px;
+  width: 40px;
+  background-color: yellow;
+  border-radius: 18px;
+}
+
+.status-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 20px;
+}
+
+.status-circle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 24px;
+  width: 24px;
   border-radius: 50%;
-  margin: 2px;
+  background-color: #00ae00; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px; 
+  color: white; 
+  border: 2px solid #fff; 
 }
-.green { background: green; }
-.red { background: red; }
-.orange { background: orange; }
-.yellow { background: yellow; }
 
 .month-selector {
   display: flex;
